--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -39,3 +39,40 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDE specific files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Local environment files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
+
+# Storybook
+storybook-static/
+
+# Optional: Package manager locks (if not using yarn)
+# package-lock.json
+# pnpm-lock.yaml
+
+# Optional: MacOS specific
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Optional: Windows specific
+Thumbs.db
+ehthumbs.db
+Desktop.ini
