--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,18 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.3.1",
+    "@mui/x-data-grid": "^7.23.6",
+    "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.63.0",
+    "@tremor/react": "^3.18.6",
+    "autoprefixer": "^10.4.20",
+    "lucide-react": "^0.471.0",
     "next": "15.1.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "recharts": "^2.15.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -25,8 +31,8 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
