--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@floating-ui/react": "^0.26.28",
+    "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.3.1",
     "@mui/x-data-grid": "^7.23.6",
@@ -21,7 +23,8 @@
     "next": "15.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
