--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,15 +16,28 @@
     "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.3.1",
     "@mui/x-data-grid": "^7.23.6",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-slot": "^1.1.1",
     "@reduxjs/toolkit": "^2.5.0",
+    "@shadcn/ui": "^0.0.4",
     "@tanstack/react-query": "^5.63.0",
+    "@types/lodash": "^4.17.14",
+    "@types/lodash.debounce": "^4.0.9",
     "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.471.0",
     "next": "15.1.4",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
-    "recharts": "^2.15.0"
+    "recharts": "^2.15.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
